<resources>
    <string name="app_name" translatable="false">donee</string>
    <string name="app_title" translatable="false">donee forms</string>

    <!-- ActivityWelcome -->
    <string name="donee_twitter" translatable="false">\@doneeforms</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to donee!</string>
    <string name="welcome_email">email address</string>
    <string name="welcome_email_error">Please provide a valid email address</string>
    <string name="welcome_password">password</string>
    <string name="welcome_password_error">Password is too short (min. 8 characters)</string>
    <string name="welcome_login">LOGIN</string>
    <string name="welcome_forgot">Forgot your password?</string>

    <!-- Error messages -->
    <string name="login_failed">The email and password you provided do not match any collector credentials</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="server_error">A server problem prevented this operation from being completed</string>
    <string name="unknown_error">An unknown error prevented this operation from being completed</string>
    <string name="session_expired">Your session has expired</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Navigation drawer items -->
    <string name="nav_category_collect">Collect</string>
    <string name="nav_forms">Forms</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_outbox">Outbox</string>
    <string name="nav_category_more">More</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="add_more_users">Add more users</string>
    <string name="no_other_users">No other users</string>

    <!-- Dialog items -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="logout_confirmation_question">Don\'t worry, no data will be lost.</string>
    <string name="switched_to">Switched to</string>

    <!-- FragmentForms -->
    <string name="no_category">No category</string>
    <string name="forms_empty">No forms to display</string>
    <string name="forms_error">Error loading forms</string>
    <string name="forms_error_internet">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="forms_refreshing_list">Refreshing forms list from servers…</string>

    <!-- FragmentCollections -->
    <string name="unpublished_forms">Deleted forms</string>
    <string name="collections_action_edit">EDIT</string>
    <string name="collections_action_delete">DELETE</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_submit">Submit all</string>
    <string name="submit_offline_hint">Please go online and try again.</string>
    <string name="submit_error">You are offline!</string>
    <string name="delete_draft_success">All drafts have been deleted</string>
    <string name="delete_outbox_success">All collections have been deleted</string>
    <string name="collections_empty">No items to display</string>
    <string name="sender_no_forms">No pending forms in Outbox</string>

    <!-- ActivityCollect -->
    <string name="validate_fields">Validate fields</string>
    <string name="submit_form">Submit form</string>
    <string name="default_spinner_hint">Select…</string>
    <string name="image_action_camera">from camera</string>
    <string name="image_action_gallery">from gallery</string>
    <string name="image_thumbnail">thumbnail</string>
    <string name="number_action_plus" translatable="false">+</string>
    <string name="number_action_minus" translatable="false">-</string>
    <string name="collect_no_error">No errors found</string>
    <string name="getting_location">Pinpointing current location…</string>
    <string name="saving_form">Saving collected data…</string>
    <string name="title_saved">Saving complete</string>
    <string name="message_saved_draft">Resume it by going to Drafts.</string>
    <string name="message_saved_outbox">Check your Outbox to submit it.</string>
    <string name="title_error">Saving failure</string>
    <string name="message_error">Please try again.</string>
    <string name="form_empty">This form has no fields</string>
    <string name="form_error">Error loading this form</string>

    <!-- Notifications -->
    <string name="sending_collections">Uploading data to servers…</string>
    <string name="sending_failed">Error uploading data to servers</string>
    <string name="sending_failed_more">Some collections may have not been sent</string>
    <string name="sending_finished">Upload successfully completed</string>
    <string name="sending_finished_more">Your outbox is now empty</string>
    <string name="of">of</string>

    <!-- FragmentSettings -->
    <string name="settings_delete_user">Remove current user from device</string>
    <string name="settings_delete_user_hint">All collected data will be lost.</string>
    <string name="user_deleted">Successfully removed from device</string>
    <string name="delete_confirmation_question">All your unsynced data will be lost!</string>
    <string name="enable_location">This form saves the location from which it was submitted. Please enable Location in Settings.</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>

</resources>
