<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/forms_empty"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forms_empty"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forms_empty"
            android:textStyle="bold"
            android:textColor="@color/donee_green"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forms_error"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/warning_icon"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/forms_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forms_error"
            android:textColor="@color/darkish_gray"
            android:layout_margin="10dp"
            android:textSize="24sp" />

        <Button
            style="@style/Button"
            android:id="@+id/forms_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ProgressBar
        style="@style/ProgressBar"
        android:id="@+id/forms_loading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <ListView
        android:id="@+id/forms_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent" />

    <TextView
        android:id="@+id/forms_non_intrusive_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_marginBottom="0dp"
        android:textColor="@android:color/white"
        android:background="@color/red"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="14sp" />

</RelativeLayout>